newtype-tools/tests/trybuild/newtype/struct-list-name-value.stderr
error: expected `#[newtype(from(...))]`
 --> tests/trybuild/newtype/struct-list-name-value.rs:2:11
  |
2 | #[newtype(from = Oranges)]
  |           ^^^^^^^^^^^^^^
